force-app/main/default/objects/Research_Publication__c/Research_Publication__c.object-meta.xml
<CustomObject>
    <label>Research and Publication</label>
    <nameField>
        <label>Research and Publication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research and Publications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>