force-app/main/default/objects/Research_Publication__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Research and Publications</relationshipLabel>
    <relationshipName>Research_and_Publications</relationshipName>
    <type>Lookup</type>
</CustomField>