force-app/main/default/objects/Research_Publication__c/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publication_Date</label>
    <type>Date</type>
</CustomField>